--- a/programa/README
+++ b/programa/README
@@ -1,1 +1,4 @@
 Tarea 4 Sistemas Operativos
+
+el programa termina su ejecucion al ingresar exit.
+el nombre de los programas a ejecutar tiene un largo maximo de 20 caracteres.
