--- a/programa/README
+++ b/programa/README
@@ -2,3 +2,6 @@ Tarea 4 Sistemas Operativos
 
 el programa termina su ejecucion al ingresar exit.
 el nombre de los programas a ejecutar tiene un largo maximo de 20 caracteres.
+
+compilar con 
+gcc -std=c99 -o main main.c structures.h
